--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                             <a href="https://github.com/ZachsHacks"><i class="fa fa-github fa-fw fa-3x"></i>Github</a>
                         </li>
                         <li>
-                            <a href="https://drive.google.com/a/brandeis.edu/file/d/0Bx5GB26OrXWieko4RVBiQjQwWkU/view?usp=sharing"><i class="fa fa-file-pdf-o fa-fw fa-3x"></i>Resumé</a>
+                            <a href="https://drive.google.com/open?id=0Bx5GB26OrXWieUg1V0N2SU85bk0"><i class="fa fa-file-pdf-o fa-fw fa-3x"></i>Resumé</a>
                         </li>
                     </ul>
                     <hr class="small">
