--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 </div>
                     </div>
                     <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                        <img class="img-responsive center-block" src="img/icon.png" alt="">
+                        <img class="img-responsive center-block" src="img/headshot.jpg" alt="">
                     </div>
                 </div>
 
