--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                             <a href="https://github.com/ZachsHacks"><i class="fa fa-github fa-fw fa-3x"></i>Github</a>
                         </li>
                         <li>
-                            <a href="https://drive.google.com/open?id=0Bx5GB26OrXWieUg1V0N2SU85bk0"><i class="fa fa-file-pdf-o fa-fw fa-3x"></i>Resumé</a>
+                            <a href="https://www.dropbox.com/s/er6erohyzv7n9ol/Zachary-Weiss-Resum%C3%A9.pdf?dl=0"><i class="fa fa-file-pdf-o fa-fw fa-3x"></i>Resumé</a>
                         </li>
                     </ul>
                     <hr class="small">
