--- a/index.html
+++ b/index.html
@@ -3,194 +3,208 @@
 
 <head>
 
-    <link rel="shortcut icon" href="/img/icon.png">
+	<link rel="shortcut icon" href="/img/icon.png">
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="">
+	<meta name="author" content="">
 
-    <title>Weiss Inc.</title>
+	<title>Weiss Inc.</title>
 
-    <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+	<!-- Bootstrap Core CSS -->
+	<link href="css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom CSS -->
-    <link href="css/stylish-portfolio.css" rel="stylesheet">
+	<!-- Custom CSS -->
+	<link href="css/stylish-portfolio.css" rel="stylesheet">
 
-    <!-- Custom Fonts -->
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+	<!-- Custom Fonts -->
+	<link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+	<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
 </head>
 
 <body>
 
-    <!-- Navigation -->
-    <a id="menu-toggle" href="#" class="btn btn-dark btn-lg toggle"><i class="fa fa-bars"></i></a>
-    <nav id="sidebar-wrapper">
-        <ul class="sidebar-nav">
-            <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
-            <li class="sidebar-brand">
-                <a href="#top" onclick=$ ( "#menu-close").click();>Navigation</a>
-            </li>
-            <li>
-                <a href="#top" onclick=$ ( "#menu-close").click();>Home</a>
-            </li>
-            <li>
-                <a href="#contact" onclick=$ ( "#menu-close").click();>Contact</a>
-            </li>
-        </ul>
-    </nav>
+	<!-- Navigation -->
+	<a id="menu-toggle" href="#" class="btn btn-dark btn-lg toggle"><i class="fa fa-bars"></i></a>
+	<nav id="sidebar-wrapper">
+		<ul class="sidebar-nav">
+			<a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
+			<li class="sidebar-brand">
+				<a href="#top" onclick=$ ( "#menu-close").click();>Navigation</a>
+			</li>
+			<li>
+				<a href="#top" onclick=$ ( "#menu-close").click();>Home</a>
+			</li>
+			<li>
+				<a href="#contact" onclick=$ ( "#menu-close").click();>Let's Chat</a>
+			</li>
+		</ul>
+	</nav>
 
-    <!-- Header -->
-    <header id="top" class="header" class="img-responsive">
-        <div class="text-vertical-center">
-            <br/>
-            <br/>
-            <br/>
-            <h1 >Zachary Shale Weiss</h1>
-            <h3>Computer Science Entrepreneur</h3>
-            <video class="videoheader" src="../video/stick_new.mov" Pluginspage="http://www.apple.com/quicktime/" width="500" height="500"
-             CONTROLLER="false" AUTOPLAY="true" name="Stick figure"></video>
-             <br/>
-             <br/>
-        </div>
-    </header>
+	<!-- Header -->
+	<header id="top" class="header" class="img-responsive">
+		<div class="text-vertical-center">
+			<br/>
+			<br/>
+			<br/>
+			<h1 >Zachary Shale Weiss</h1>
+			<h3>Computer Science Entrepreneur</h3>
+			<video class="videoheader" src="../video/stick_new.mov" Pluginspage="http://www.apple.com/quicktime/" width="500" height="500"
+			CONTROLLER="false" AUTOPLAY="true" name="Stick figure"></video>
+			<br/>
+			<br/>
+		</div>
+	</header>
 
-    <section id="portfolio" class="portfolio">
-            <div class="container">
-                <div class="row">
-                    <div class="clearfix"></div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-5 col-sm-6">
-                        <h2 class="section-heading">Hello there!</h2>
-                            <hr class="section-heading-spacer">
-                        <div class="lead"><p><br /></p>
-                            <p1>Thank you for visiting my website. I am a young developer, ready
-        for any technological challenge you can throw my way. You can find my contact information below.</p1>
-                </div>
-                    </div>
-                    <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                        <img class="img-responsive center-block" src="img/headshot.jpg" alt="">
-                    </div>
-                </div>
+	<section id="portfolio" class="portfolio">
+		<div class="container">
+			<div class="row">
+				<div class="clearfix"></div>
+			</div>
+			<div class="row">
+				<div class="col-lg-5 col-sm-6">
+					<h2 class="section-heading">Hello there!</h2>
+					<hr class="section-heading-spacer">
+					<div class="lead"><p><br /></p>
+						<p1>Thank you for visiting my website. I am a young developer, ready
+							for any technological challenge you can throw my way. You can find my contact information below.</p1>
+						</div>
+					</div>
+					<div class="col-lg-5 col-lg-offset-2 col-sm-6">
+						<img class="img-responsive center-block" src="img/headshot.jpg" alt="">
+					</div>
+				</div>
 
-            </div>
+			</div>
 
-             </section>
-            <!-- /.container -->
+		</section>
+		<!-- /.container -->
 
-        <!-- Callout -->
-    <aside class="callout">
-        <div class="text-vertical-center">
-            <h1>Contact</h1>
-        </div>
-    </aside>
+		<section id="portfolio" class="portfolio">
+			<div class="container">
+				<div class="row">
+					<div class="clearfix"></div>
+				</div>
+				<div class="row">
+					<div class="col-lg-5 col-sm-6">
+						<h2 class="section-heading">Hello there!</h2>
+						<hr class="section-heading-spacer">
+						<div class="col-lg-5 col-lg-offset-2 col-sm-6">
+							<img class="img-responsive center-block" src="img/headshot.jpg" alt="">
+						</div>
+						<div class="lead"><p><br /></p>
+							<p1>Thank you for visiting my website. I am a young developer, ready
+								for any technological challenge you can throw my way. You can find my contact information below.</p1>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+
+		<!-- Callout -->
+		<aside class="callout">
+			<div class="text-vertical-center">
+				<h1>Let's Chat</h1>
+			</div>
+		</aside>
 
 
-    <!-- Footer -->
-    <footer>
-        <div id="contact" class="container">
-            <div class="row">
-                <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <h4><strong>Zachary Shale Weiss</strong>
-                    </h4>
-                    <p>415 South Street MB 467
-                        <br>Waltham, MA 02454</p>
-                    <ul class="list-unstyled">
-                        <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:zweiss@brandeis.edu">zweiss@brandeis.edu</a>
-                        </li>
-                    </ul>
-                    <br>
-                    <ul class="list-inline">
-                        <li>
-                            <a href="https://www.linkedin.com/in/zacharyshaleweiss"><i class="fa fa-linkedin fa-fw fa-3x"></i>Linkedin</a>
-                        </li>
-                        <li>
-                            <a href="https://github.com/ZachsHacks"><i class="fa fa-github fa-fw fa-3x"></i>Github</a>
-                        </li>
-                        <li>
-                            <a href="https://www.dropbox.com/s/er6erohyzv7n9ol/Zachary-Weiss-Resum%C3%A9.pdf?dl=0"><i class="fa fa-file-pdf-o fa-fw fa-3x"></i>Resumé</a>
-                        </li>
-                    </ul>
-                    <hr class="small">
-                    <p class="text-muted">Copyright &copy; Zachary Shale Weiss 2017</p>
-                </div>
-            </div>
-        </div>
-        <a id="to-top" href="#top" class="btn btn-dark btn-lg"><i class="fa fa-chevron-up fa-fw fa-1x"></i></a>
-    </footer>
+		<!-- Footer -->
+		<footer>
+			<div id="contact" class="container">
+				<div class="row">
+					<div class="col-lg-10 col-lg-offset-1 text-center">
+						<h4><strong>Zachary Shale Weiss</strong>
+						</h4>
+						<p>415 South Street MB 467
+							<br>Waltham, MA 02454</p>
+							<ul class="list-unstyled">
+								<li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:zweiss@brandeis.edu">zweiss@brandeis.edu</a>
+								</li>
+							</ul>
+							<br>
+							<ul class="list-inline">
+								<li>
+									<a href="https://www.linkedin.com/in/zacharyshaleweiss"><i class="fa fa-linkedin fa-fw fa-3x"></i>Linkedin</a>
+								</li>
+								<li>
+									<a href="https://github.com/ZachsHacks"><i class="fa fa-github fa-fw fa-3x"></i>Github</a>
+								</li>
+								<li>
+									<a href="https://www.dropbox.com/s/er6erohyzv7n9ol/Zachary-Weiss-Resum%C3%A9.pdf?dl=0"><i class="fa fa-file-pdf-o fa-fw fa-3x"></i>Resumé</a>
+								</li>
+							</ul>
+							<hr class="small">
+							<p class="text-muted">Copyright &copy; Zachary Shale Weiss 2017</p>
+						</div>
+					</div>
+				</div>
+				<a id="to-top" href="#top" class="btn btn-dark btn-lg"><i class="fa fa-chevron-up fa-fw fa-1x"></i></a>
+			</footer>
 
-    <!-- jQuery -->
-    <script src="js/jquery.js"></script>
+			<!-- jQuery -->
+			<script src="js/jquery.js"></script>
 
-    <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+			<!-- Bootstrap Core JavaScript -->
+			<script src="js/bootstrap.min.js"></script>
 
-    <!-- Custom Theme JavaScript -->
-    <script>
-    // Closes the sidebar menu
-    $("#menu-close").click(function(e) {
-        e.preventDefault();
-        $("#sidebar-wrapper").toggleClass("active");
-    });
-    // Opens the sidebar menu
-    $("#menu-toggle").click(function(e) {
-        e.preventDefault();
-        $("#sidebar-wrapper").toggleClass("active");
-    });
-    // Scrolls to the selected menu item on the page
-    $(function() {
-        $('a[href*=#]:not([href=#])').click(function() {
-            if (location.pathname.replace(/^\//, '') == this.pathname.replace(/^\//, '') || location.hostname == this.hostname) {
-                var target = $(this.hash);
-                target = target.length ? target : $('[name=' + this.hash.slice(1) + ']');
-                if (target.length) {
-                    $('html,body').animate({
-                        scrollTop: target.offset().top
-                    }, 1000);
-                    return false;
-                }
-            }
-        });
-    });
-    //#to-top button appears after scrolling
-    var fixed = false;
-    $(document).scroll(function() {
-        if ($(this).scrollTop() > 250) {
-            if (!fixed) {
-                fixed = true;
-                // $('#to-top').css({position:'fixed', display:'block'});
-                $('#to-top').show("slow", function() {
-                    $('#to-top').css({
-                        position: 'fixed',
-                        display: 'block'
-                    });
-                });
-            }
-        } else {
-            if (fixed) {
-                fixed = false;
-                $('#to-top').hide("slow", function() {
-                    $('#to-top').css({
-                        display: 'none'
-                    });
-                });
-            }
-        }
-    });
-    </script>
+			<!-- Custom Theme JavaScript -->
+			<script>
+			// Closes the sidebar menu
+			$("#menu-close").click(function(e) {
+				e.preventDefault();
+				$("#sidebar-wrapper").toggleClass("active");
+			});
+			// Opens the sidebar menu
+			$("#menu-toggle").click(function(e) {
+				e.preventDefault();
+				$("#sidebar-wrapper").toggleClass("active");
+			});
+			// Scrolls to the selected menu item on the page
+			$(function() {
+				$('a[href*=#]:not([href=#])').click(function() {
+					if (location.pathname.replace(/^\//, '') == this.pathname.replace(/^\//, '') || location.hostname == this.hostname) {
+						var target = $(this.hash);
+						target = target.length ? target : $('[name=' + this.hash.slice(1) + ']');
+						if (target.length) {
+							$('html,body').animate({
+								scrollTop: target.offset().top
+							}, 1000);
+							return false;
+						}
+					}
+				});
+			});
+			//#to-top button appears after scrolling
+			var fixed = false;
+			$(document).scroll(function() {
+				if ($(this).scrollTop() > 250) {
+					if (!fixed) {
+						fixed = true;
+						// $('#to-top').css({position:'fixed', display:'block'});
+						$('#to-top').show("slow", function() {
+							$('#to-top').css({
+								position: 'fixed',
+								display: 'block'
+							});
+						});
+					}
+				} else {
+					if (fixed) {
+						fixed = false;
+						$('#to-top').hide("slow", function() {
+							$('#to-top').css({
+								display: 'none'
+							});
+						});
+					}
+				}
+			});
+			</script>
 
-</body>
+		</body>
 
-</html>
+		</html>
