Another minor change

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
 	<!-- Custom CSS -->
 	<link href="css/stylish-portfolio.css" rel="stylesheet">
+	<link href="css/my-custom.css" rel="stylesheet">
 
 	<!-- Custom Fonts -->
 	<link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -66,11 +67,10 @@
 			</div>
 			<div class="row">
 				<div class="col-lg-5 col-sm-6">
-					<h2 class="section-heading">Hello there!</h2>
+					<h1 class="section-heading">Hey there!</h1>
 					<hr class="section-heading-spacer">
-					<div class="lead"><p><br /></p>
-						<p1>Thank you for visiting my website. I am a young developer, ready
-							for any technological challenge you can throw my way. You can find my contact information below.</p1>
+					<div class="lead">
+						<p1>Thank you for visiting my website. If you are here, then you are officially awesome. Please continue your awesomeness by reaching out to one of my contacts below!</p1>
 						</div>
 					</div>
 					<div class="col-lg-5 col-lg-offset-2 col-sm-6">
@@ -81,7 +81,6 @@
 			</div>
 
 		</section>
-		<!-- /.container -->
 
 			<!-- Callout -->
 			<aside class="callout">
@@ -98,8 +97,8 @@
 						<div class="col-lg-10 col-lg-offset-1 text-center">
 							<h4><strong>Zachary Shale Weiss</strong>
 							</h4>
-							<p>415 South Street MB 467
-								<br>Waltham, MA 02454</p>
+							<p>415 South Street MB 0467
+								<br>Waltham, MA 02453</p>
 								<ul class="list-unstyled">
 									<li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:zweiss@brandeis.edu">zweiss@brandeis.edu</a>
 									</li>
