--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
   <!-- Navigation-->
   <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
     <div class="container px-5">
-      <a class="navbar-brand" href="#page-top">Zach Weiss</a>
+      <a class="navbar-brand" href="www.coachzachweiss.com">Zach Weiss</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link" href="#!">Coaching</a></li>
           <li class="nav-item"><a class="nav-link" href="#!">My Story</a></li>
-          <li class="nav-item"><a class="nav-link" href="https://m342zrqcrg7.typeform.com/to/VayVTzsv">Work With Me</a></li>
+          <li style="border: solid #fff 1px;" class="nav-item"><a class="nav-link" href="https://m342zrqcrg7.typeform.com/to/VayVTzsv">Work With Me</a></li>
         </ul>
       </div>
     </div>
@@ -52,7 +52,7 @@
       </div>
       <div class="col-lg-6">
         <div class="p-5">
-          <h2 class="display-4">Former Software Engineer, Life Coach, Storyteller</h2>
+          <h2 class="display-4">Life Coach, Storyteller, Former Software Engineer</h2>
           <p>5+ years of experience working as a Software Engineer at a major tech company turned full-time transformational life coach. Zach helps people discover their true passions and overcome any limiting beliefs holding them back, so they find a career they love.</p>
           </div>
           <ul style="padding-left: 7px; text-align: center;">
@@ -71,6 +71,9 @@
   </footer>
   <!-- Bootstrap core JS-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <!-- Core theme JS-->
   <script src="js/scripts.js"></script>
 </body>
